[package]
name = "newton"
version = "0.1.0"
authors = ["german gomez <germangb42@gmail.com>"]
edition = "2018"

[dependencies]
ffi = { package = "newton-sys", path = "newton-sys/"}
num_cpus = "1.9.0"
failure = "0.1.3"
num-traits = "0.2.6"

cgmath = { version = "*", optional = true }

gl = { version = "0.10", optional = true }
sdl2 = { version = "0.31", optional = true }
lazy_static = { version = "1.0", optional = true }
imgui-sdl2 = { version = "0.3.0", optional = true }
imgui = { version = "0.0.21", optional = true }
imgui-opengl-renderer = { version = "0.3.1", optional = true }

[features]
default = []

sandbox = ["cgmath", "sdl2", "lazy_static", "imgui-sdl2", "imgui", "imgui-opengl-renderer", "gl"]
cgmath_types = ["cgmath"]
