[package]
name = "newton"
version = "0.1.0"
authors = ["german gomez <germangb42@gmail.com>"]
edition = "2018"

[dependencies]
ffi = { package = "newton-sys", path = "newton-sys/"}
num_cpus = "1.9.0"
slab = "0.4"

# testbed deps
gl = { version = "0.11.0", optional = true }
sdl2 = { version = "0.32.1", optional = true }
imgui = { version = "0.0.22", optional = true }
imgui-sdl2 = { version = "0.5.0", optional = true }
imgui-opengl-renderer = { version = "0.4.0", optional = true }
imgui-ext = { version = "0.1.6", optional = true }
cgmath = { version = "*", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }

[features]
default = ["testbed"]
testbed = ["gl", "sdl2", "imgui", "imgui-sdl2", "imgui-opengl-renderer", "imgui-ext", "cgmath", "serde", "serde_json"]
