[package]
name = "newton-sandbox"
version = "0.1.0"
authors = ["german gomez <germangb42@gmail.com>"]
edition = "2018"

[dependencies]
newton = { path = "../newton"}
cgmath = "0.16"
gl = "0.10"
sdl2 = "0.31"
lazy_static = "1.0"

imgui-sdl2 = "0.3.0"
imgui = "0.0.21"
imgui-opengl-renderer = "0.3.1"

#[patch.crates-io]
#imgui = { git = "https://github.com/Gekkio/imgui-rs.git" }