[package]
name = "newton"
version = "0.1.0"
authors = ["german gomez <germangb42@gmail.com>"]
edition = "2018"

[dependencies]
ffi = { package = "newton-sys", path = "../newton-sys"}

cgmath = { version = "0.16", optional = true }
gl = { version = "0.10", optional = true }
sdl2 = { version = "0.31", optional = true }
lazy_static = { version = "1.0", optional = true }
imgui-sdl2 = { version = "0.3.0", optional = true }
imgui = { version = "0.0.21", optional = true }
imgui-opengl-renderer = { version = "0.3.1", optional = true }
slice-deque = { version = "0.1.16", optional = true }

[features]
default = ["sandbox", "cgmath_types", "async"]

sandbox = ["cgmath", "sdl2", "lazy_static", "imgui-sdl2", "imgui", "imgui-opengl-renderer", "gl", "slice-deque"]
cgmath_types = ["cgmath"]
async = []
